refactor: update CORS config to read allowed origins from env variables